# backend/app/router/__init__.py
@@ -1,0 +1,8 @@
+from fastapi import APIRouter
+
+from . import auth, user
+
+api_router = APIRouter()
+
+api_router.include_router(auth.router, prefix="/auth", tags=["auth"])
+api_router.include_router(user.router, prefix="/users", tags=["users"])
